[gd_scene load_steps=13 format=4 uid="uid://buop56k2xua72"]

[ext_resource type="Script" uid="uid://dvagl716oqyxb" path="res://Kiosk (restaurant)/Scripts/testing_scene.gd" id="1_5hxfs"]
[ext_resource type="PackedScene" uid="uid://cf8usis5fxio3" path="res://Game (movements, npcs, world map, inventory)/Scenes/Player/main_character.tscn" id="1_mvijt"]
[ext_resource type="PackedScene" uid="uid://x0go4prl867m" path="res://Market (shops, items)/Scenes/money_container.tscn" id="2_8xr7h"]
[ext_resource type="TileSet" uid="uid://c7couursgthsf" path="res://Kiosk (restaurant)/Assets/TileSets/restaurant_tile_set.tres" id="2_ssy2t"]
[ext_resource type="TileSet" uid="uid://bu2r531ao1kao" path="res://Kiosk (restaurant)/Assets/TileSets/interiors_tile_sets.tres" id="3_hi7x0"]
[ext_resource type="Texture2D" uid="uid://pnklqblnogb3" path="res://icon.svg" id="3_xd6dw"]
[ext_resource type="Script" uid="uid://xy2q2dc116es" path="res://Kiosk (restaurant)/Scripts/Cook.gd" id="5_2qw1t"]
[ext_resource type="PackedScene" uid="uid://c08dmsrhc5iei" path="res://Kiosk (restaurant)/Scenes/touch_controls.tscn" id="5_wvgkv"]
[ext_resource type="Texture2D" uid="uid://3pqak6r75tnb" path="res://Kiosk (restaurant)/Assets/Interiors_free/image.png" id="8_442mg"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_442mg"]
a = Vector2(176, 88)
b = Vector2(96, 88)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2qw1t"]
size = Vector2(64, 64)

[sub_resource type="Curve2D" id="Curve2D_btmqb"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1224, 131, 0, 0, 0, 0, 696, 131, 0, 0, 0, 0, 696, 155, 0, 0, 0, 0, 1256, 155)
}
point_count = 4

[node name="TestingScene" type="Node2D"]
script = ExtResource("1_5hxfs")

[node name="WorldMap" type="Node2D" parent="."]

[node name="Floor" type="TileMapLayer" parent="WorldMap"]
tile_map_data = PackedByteArray("AAAAAAgAAQASAFcAAAAAAAsAAQASAFcAAAAAAA4AAQASAFcAAAAAABEAAQASAFcAAAAAABQAAQASAFcAAAAAABcAAQASAFcAAAAAABoAAQASAFcAAAAAAB0AAQASAFcAAAADAB0AAQASAFcAAAAGAB0AAQASAFcAAAAJAB0AAQASAFcAAAAMAB0AAQASAFcAAAAPAB0AAQASAFcAAAASAB0AAQASAFcAAAAVAB0AAQASAFcAAAAYAB0AAQASAFcAAAAbAB0AAQASAFcAAAAeAB0AAQASAFcAAAAhAB0AAQASAFcAAAAkAB0AAQASAFcAAAAnAB0AAQASAFcAAAAqAB0AAQASAFcAAAAqABoAAQASAFcAAAAnABoAAQASAFcAAAAnABcAAQASAFcAAAAqABcAAQASAFcAAAAnABQAAQASAFcAAAAqABQAAQASAFcAAAAnABEAAQASAFcAAAAqABEAAQASAFcAAAAnAA4AAQASAFcAAAAqAA4AAQASAFcAAAAnAAsAAQASAFcAAAAqAAsAAQASAFcAAAAnAAgAAQASAFcAAAAqAAgAAQASAFcAAAAnAAUAAQASAFcAAAAqAAUAAQASAFcAAAAkAAUAAQASAFcAAAAhAAUAAQASAFcAAAAeAAUAAQASAFcAAAAbAAUAAQASAFcAAAAYAAUAAQASAFcAAAAVAAUAAQASAFcAAAASAAUAAQASAFcAAAAPAAUAAQASAFcAAAAMAAUAAQASAFcAAAAJAAUAAQASAFcAAAAGAAUAAQASAFcAAAADAAUAAQASAFcAAAAAAAUAAQASAFcAAAADAAgAAQASAFcAAAAGAAgAAQASAFcAAAAJAAgAAQASAFcAAAAAACAAAQASAFcAAAADACAAAQASAFcAAAAGACAAAQASAFcAAAAJACAAAQASAFcAAAAMACAAAQASAFcAAAAPACAAAQASAFcAAAASACAAAQASAFcAAAAVACAAAQASAFcAAAAYACAAAQASAFcAAAAbACAAAQASAFcAAAAeACAAAQASAFcAAAAhACAAAQASAFcAAAAkACAAAQASAFcAAAAnACAAAQASAFcAAAAqACAAAQASAFcAAAD9/wUAAQASAFcAAAD9/wgAAQASAFcAAAD9/wsAAQASAFcAAAD9/w4AAQASAFcAAAD9/xEAAQASAFcAAAD9/xQAAQASAFcAAAD9/xcAAQASAFcAAAD9/xoAAQASAFcAAAD9/x0AAQASAFcAAAD9/yAAAQASAFcAAAD9/wIAAQASAFcAAAAAAAIAAQASAFcAAAADAAIAAQASAFcAAAAGAAIAAQASAFcAAAAJAAIAAQASAFcAAAAMAAIAAQASAFcAAAAPAAIAAQASAFcAAAASAAIAAQASAFcAAAAVAAIAAQASAFcAAAAYAAIAAQASAFcAAAAbAAIAAQASAFcAAAAeAAIAAQASAFcAAAAhAAIAAQASAFcAAAAkAAIAAQASAFcAAAAnAAIAAQASAFcAAAAqAAIAAQASAFcAAAAMAAgAAQASAFcAAAADAAsAAQASAFcAAAAGAAsAAQASAFcAAAAJAAsAAQASAFcAAAAMAAsAAQASAFcAAAADAA4AAQASAFcAAAAGAA4AAQASAFcAAAAJAA4AAQASAFcAAAAMAA4AAQASAFcAAAADABEAAQASAFcAAAAGABEAAQASAFcAAAAJABEAAQASAFcAAAAMABEAAQASAFcAAAADABQAAQASAFcAAAAGABQAAQASAFcAAAAJABQAAQASAFcAAAAMABQAAQASAFcAAAADABcAAQASAFcAAAAGABcAAQASAFcAAAAJABcAAQASAFcAAAAMABcAAQASAFcAAAADABoAAQASAFcAAAAGABoAAQASAFcAAAAJABoAAQASAFcAAAAMABoAAQASAFcAAAAPAAgAAQASAFcAAAASAAgAAQASAFcAAAAVAAgAAQASAFcAAAAYAAgAAQASAFcAAAAbAAgAAQASAFcAAAAeAAgAAQASAFcAAAAhAAgAAQASAFcAAAAkAAgAAQASAFcAAAAPAAsAAQASAFcAAAASAAsAAQASAFcAAAAVAAsAAQASAFcAAAAYAAsAAQASAFcAAAAbAAsAAQASAFcAAAAeAAsAAQASAFcAAAAhAAsAAQASAFcAAAAkAAsAAQASAFcAAAAPAA4AAQASAFcAAAAPABEAAQASAFcAAAAPABQAAQASAFcAAAAPABoAAQASAFcAAAAPABcAAQASAFcAAAASABoAAQASAFcAAAAVABoAAQASAFcAAAAYABoAAQASAFcAAAAbABoAAQASAFcAAAAeABoAAQASAFcAAAAhABoAAQASAFcAAAAkABoAAQASAFcAAAAkABcAAQASAFcAAAAhABcAAQASAFcAAAAeABcAAQASAFcAAAAbABcAAQASAFcAAAAYABcAAQASAFcAAAAVABcAAQASAFcAAAASABcAAQASAFcAAAASABQAAQASAFcAAAASABEAAQASAFcAAAASAA4AAQASAFcAAAAVAA4AAQASAFcAAAAYAA4AAQASAFcAAAAbAA4AAQASAFcAAAAeAA4AAQASAFcAAAAhAA4AAQASAFcAAAAkAA4AAQASAFcAAAAkABEAAQASAFcAAAAVABEAAQASAFcAAAAYABEAAQASAFcAAAAbABEAAQASAFcAAAAeABEAAQASAFcAAAAhABEAAQASAFcAAAAVABQAAQASAFcAAAAYABQAAQASAFcAAAAbABQAAQASAFcAAAAeABQAAQASAFcAAAAhABQAAQASAFcAAAAkABQAAQASAFcAAAA=")
tile_set = ExtResource("3_hi7x0")

[node name="Walls" type="TileMapLayer" parent="WorldMap"]
tile_set = ExtResource("2_ssy2t")

[node name="Interior" type="TileMapLayer" parent="WorldMap"]
tile_map_data = PackedByteArray("AAAMAAUAAQADABEAAAANAAUAAQADABEAAAAOAAUAAQADABEAAAAPAAUAAQADABEAAAAQAAUAAQADABEAAAARAAUAAQADABEAAAASAAUAAQADABEAAAATAAUAAQADABEAAAAUAAUAAQADABEAAAAVAAUAAQADABEAAAAWAAUAAQADABEAAAAXAAUAAQADABEAAAAYAAUAAQADABEAAAAZAAUAAQADABEAAAAaAAUAAQADABEAAAAbAAUAAQADABEAAAAcAAUAAQADABEAAAAdAAUAAQADABEAAAAeAAUAAQADABEAAAAfAAUAAQADABEAAAAgAAUAAQADABEAAAAhAAUAAQADABEAAAAiAAUAAQADABEAAAAjAAUAAQADABEAAAAEAB0AAQADABgAAAAFAB0AAQADABgAAAAGAB0AAQADABgAAAAHAB0AAQADABgAAAAIAB0AAQADABgAAAAJAB0AAQADABgAAAAKAB0AAQADABgAAAALAB0AAQADABgAAAAMAB0AAQADABgAAAANAB0AAQADABgAAAAOAB0AAQADABgAAAAPAB0AAQADABgAAAAQAB0AAQADABgAAAARAB0AAQADABgAAAASAB0AAQADABgAAAATAB0AAQADABgAAAAUAB0AAQADABgAAAAVAB0AAQADABgAAAAWAB0AAQADABgAAAAXAB0AAQADABgAAAAYAB0AAQADABgAAAAZAB0AAQADABgAAAAaAB0AAQADABgAAAAbAB0AAQADABgAAAAcAB0AAQADABgAAAAdAB0AAQADABgAAAAeAB0AAQADABgAAAAfAB0AAQADABgAAAAgAB0AAQADABgAAAAhAB0AAQADABgAAAAiAB0AAQADABgAAAAAAAgAAQAAABUAAAAAAAkAAQAAABUAAAAAAAoAAQAAABUAAAAAAAsAAQAAABUAAAAAAAwAAQAAABUAAAAAAA0AAQAAABUAAAAAAA4AAQAAABUAAAAAAA8AAQAAABUAAAAAABAAAQAAABUAAAAAABEAAQAAABUAAAAAABIAAQAAABUAAAAAABMAAQAAABUAAAAAABQAAQAAABUAAAAAABUAAQAAABUAAAAAABYAAQAAABUAAAAAABcAAQAAABUAAAAAABgAAQAAABUAAAAAABkAAQAAABUAAAAAABoAAQAAABUAAAAAABsAAQAAABUAAAAAAAUAAQAAABEAAAAAAB0AAQAAABgAAAADAB0AAQADABgAAAAjAB0AAQADABgAAAAmAB0AAQADABgAAAAmAAUAAQADABEAAAAnAAUAAQADABEAAAApAAUAAQAGABEAAAApAAgAAQAGABUAAAApAAkAAQAGABUAAAApAAoAAQAGABUAAAApAAsAAQAGABUAAAApAAwAAQAGABUAAAApAA0AAQAGABUAAAApAA4AAQAGABUAAAApAA8AAQAGABUAAAApABAAAQAGABUAAAApABEAAQAGABUAAAApABIAAQAGABUAAAApABMAAQAGABUAAAApABQAAQAGABUAAAApABUAAQAGABUAAAApABYAAQAGABUAAAApABcAAQAGABUAAAApABgAAQAGABUAAAApABkAAQAGABUAAAApABoAAQAGABUAAAApAB0AAQAGABgAAAADAAUAAQADABEAAAAEAAUAAQADABEAAAA=")
tile_set = ExtResource("3_hi7x0")

[node name="Area2D" type="Area2D" parent="WorldMap"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldMap/Area2D"]
shape = SubResource("SegmentShape2D_442mg")

[node name="mainCharacter" parent="." instance=ExtResource("1_mvijt")]
z_index = 1
position = Vector2(248, 192)
scale = Vector2(2, 2)
move_speed = 200.0

[node name="Camera2D" type="Camera2D" parent="mainCharacter"]
zoom = Vector2(1.555, 1.555)

[node name="Cook" type="StaticBody2D" parent="."]
position = Vector2(432, 128)
scale = Vector2(0.75, 0.75)
script = ExtResource("5_2qw1t")

[node name="Sprite2D" type="Sprite2D" parent="Cook"]
texture = ExtResource("8_442mg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cook"]
shape = SubResource("RectangleShape2D_2qw1t")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="UI"]

[node name="MoneyContainer" parent="UI/CanvasLayer" instance=ExtResource("2_8xr7h")]
anchor_left = 0.765625
anchor_top = 0.0617284
anchor_right = 0.972222
anchor_bottom = 0.125
offset_left = -50.0
offset_top = -31.0
offset_right = 0.0
offset_bottom = -31.0

[node name="PanelContainer" type="PanelContainer" parent="UI/CanvasLayer"]
anchors_preset = -1
anchor_left = 0.846354
anchor_top = 0.148148
anchor_right = 0.971354
anchor_bottom = 0.209877
offset_left = 1.0
offset_top = -40.0
offset_right = 1.0
offset_bottom = -40.0
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="UI/CanvasLayer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/CanvasLayer/PanelContainer/HBoxContainer"]
layout_mode = 2
text = "COOK BOOK"

[node name="TextureRect" type="TextureRect" parent="UI/CanvasLayer/PanelContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_xd6dw")
expand_mode = 2
stretch_mode = 4

[node name="PanelContainer2" type="PanelContainer" parent="UI/CanvasLayer"]
anchors_preset = -1
anchor_left = 0.895833
anchor_top = 0.234568
anchor_right = 0.972222
anchor_bottom = 0.296296
offset_top = -51.0
offset_bottom = -51.0
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="UI/CanvasLayer/PanelContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="UI/CanvasLayer/PanelContainer2/HBoxContainer"]
layout_mode = 2
text = "SHOP"

[node name="TextureRect" type="TextureRect" parent="UI/CanvasLayer/PanelContainer2/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_xd6dw")
expand_mode = 2
stretch_mode = 4

[node name="TouchControls" parent="UI" instance=ExtResource("5_wvgkv")]

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_btmqb")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(698.405, 131)
rotation = 3.14159
progress = 525.42
rotates = false

[node name="Path2D2" type="Path2D" parent="."]
position = Vector2(0, 71)
curve = SubResource("Curve2D_btmqb")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D2"]
position = Vector2(1224, 131)
rotation = 3.14159
rotates = false

[node name="Path2D3" type="Path2D" parent="."]
position = Vector2(0, 141)
curve = SubResource("Curve2D_btmqb")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D3"]
position = Vector2(1224, 131)
rotation = 3.14159
rotates = false

[node name="Path2D4" type="Path2D" parent="."]
position = Vector2(0, 207)
curve = SubResource("Curve2D_btmqb")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D4"]
position = Vector2(1224, 131)
rotation = 3.14159
rotates = false

[node name="Path2D5" type="Path2D" parent="."]
position = Vector2(0, 279)
curve = SubResource("Curve2D_btmqb")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D5"]
position = Vector2(696.502, 130.773)
rotation = 3.14159
progress = 527.22
rotates = false

[connection signal="gui_input" from="UI/CanvasLayer/PanelContainer2/HBoxContainer" to="." method="_on_h_box_container_gui_input"]
